manifests/app/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: public-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      nodeSelector:
        kubernetes.io/hostname: server-tang4
      containers:
        - name: nginx
          image: nginx:alpine
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 2
            periodSeconds: 5
