manifests/app/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: public-app
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - name: http
      port: 80
      targetPort: http
