manifests/app/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: public-app
spec:
  ingressClassName: traefik
  rules:
    - host: nginx.apps.k3s.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  name: http
